# serde_cbored

./: Cargo.toml  README.md
src/: de.rs  error.rs  lib.rs  ser.rs
src/de/: mod.rs
src/ser/: basic.rs  complex.rs  mod.rs  tests.rs
src/serde/: common.rs  mod.rs  ser.rs
