[package]
name = "cbor_ed"
version = "0.1.0-dev"
edition = "2024"
description = "A CBOR implementation for the serde framework"
repository = "https://github.com/itsgerliz/CBORed"
license = "BSD-3-Clause"
keywords = ["cbor", "serde", "format", "binary", "encoding"]
categories = ["encoding"]

[dependencies]
serde = "1.0.228"
thiserror = "2.0.17"
